@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 27-12-2005 added: new Http Api command "getmedialocation", used as follows:
+			getmedialocation&parameter=type;location;showdate
+			type=(music,video,pictures), location=share name or path, showdate=(0,1)
  - 27-12-2005 added: advanced configuration option for path substitution; look in xboxmediacetner.xml for details.
  - 27-12-2005 fixed: Bypass CD Selection in "x" seconds
  - 27-12-2005 changed: HTTP API getshares command now accepts a type parameter: getshares&parameter=type;pathsonly
